--- a/iqueaWeb/iqueaWeb.csproj
+++ b/iqueaWeb/iqueaWeb.csproj
@@ -70,6 +70,8 @@
     <Content Include="Categoria.aspx" />
     <Content Include="ext.aspx" />
     <Content Include="Exterior.aspx" />
+    <Content Include="HomePage.aspx" />
+    <Content Include="HomePage.css" />
     <Content Include="Interior.aspx" />
     <Content Include="mystyle.css" />
     <Content Include="Web.config" />
@@ -95,6 +97,13 @@
     </Compile>
     <Compile Include="Exterior.aspx.designer.cs">
       <DependentUpon>Exterior.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="HomePage.aspx.cs">
+      <DependentUpon>HomePage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HomePage.aspx.designer.cs">
+      <DependentUpon>HomePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Interior.aspx.cs">
       <DependentUpon>Interior.aspx</DependentUpon>
