--- a/iqueaWeb/iqueaWeb.csproj
+++ b/iqueaWeb/iqueaWeb.csproj
@@ -73,7 +73,7 @@
     <Content Include="Carrito.aspx" />
     <Content Include="CrearAnuncio.aspx" />
     <Content Include="CrearOferta.aspx" />
-    <Content Include="ext.aspx" />
+    <Content Include="etc.aspx" />
     <Content Include="Exterior.aspx" />
     <Content Include="CrearArticulo.aspx" />
     <Content Include="BorrarArticulo.aspx" />
@@ -163,12 +163,12 @@
     <Compile Include="CrearOferta.aspx.designer.cs">
       <DependentUpon>CrearOferta.aspx</DependentUpon>
     </Compile>
-    <Compile Include="ext.aspx.cs">
-      <DependentUpon>ext.aspx</DependentUpon>
+    <Compile Include="etc.aspx.cs">
+      <DependentUpon>etc.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ext.aspx.designer.cs">
-      <DependentUpon>ext.aspx</DependentUpon>
+    <Compile Include="etc.aspx.designer.cs">
+      <DependentUpon>etc.aspx</DependentUpon>
     </Compile>
     <Compile Include="Exterior.aspx.cs">
       <DependentUpon>Exterior.aspx</DependentUpon>
