--- a/iqueaWeb/iqueaWeb.csproj
+++ b/iqueaWeb/iqueaWeb.csproj
@@ -66,9 +66,10 @@
   <ItemGroup>
     <Content Include="etc.aspx" />
     <Content Include="Exterior.aspx" />
-    <Content Include="HomePage.aspx" />
+    <Content Include="Index.aspx" />
     <Content Include="HomePage.css" />
     <Content Include="Interior.aspx" />
+    <Content Include="mystyle.css" />
     <Content Include="Site1.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -87,12 +88,12 @@
     <Compile Include="Exterior.aspx.designer.cs">
       <DependentUpon>Exterior.aspx</DependentUpon>
     </Compile>
-    <Compile Include="HomePage.aspx.cs">
-      <DependentUpon>HomePage.aspx</DependentUpon>
+    <Compile Include="Index.aspx.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="HomePage.aspx.designer.cs">
-      <DependentUpon>HomePage.aspx</DependentUpon>
+    <Compile Include="Index.aspx.designer.cs">
+      <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Interior.aspx.cs">
       <DependentUpon>Interior.aspx</DependentUpon>
