--- a/iqueaWeb/iqueaWeb.csproj
+++ b/iqueaWeb/iqueaWeb.csproj
@@ -64,22 +64,27 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="etc.aspx" />
+    <Content Include="Clasico.aspx" />
     <Content Include="Exterior.aspx" />
     <Content Include="Index.aspx" />
-    <Content Include="HomePage.css" />
     <Content Include="Interior.aspx" />
+    <Content Include="Moderno.aspx" />
     <Content Include="mystyle.css" />
-    <Content Include="Site1.aspx" />
+    <Content Include="OrdenaI.aspx" />
+    <Content Include="OrdenaE.aspx" />
+    <Content Include="OrdenaC.aspx" />
+    <Content Include="OrdenaM.aspx" />
+    <Content Include="OrdenaS.aspx" />
+    <Content Include="Sencillo.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="etc.aspx.cs">
-      <DependentUpon>etc.aspx</DependentUpon>
+    <Compile Include="Clasico.aspx.cs">
+      <DependentUpon>Clasico.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="etc.aspx.designer.cs">
-      <DependentUpon>etc.aspx</DependentUpon>
+    <Compile Include="Clasico.aspx.designer.cs">
+      <DependentUpon>Clasico.aspx</DependentUpon>
     </Compile>
     <Compile Include="Exterior.aspx.cs">
       <DependentUpon>Exterior.aspx</DependentUpon>
@@ -102,13 +107,55 @@
     <Compile Include="Interior.aspx.designer.cs">
       <DependentUpon>Interior.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Site1.aspx.cs">
-      <DependentUpon>Site1.aspx</DependentUpon>
+    <Compile Include="Moderno.aspx.cs">
+      <DependentUpon>Moderno.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Site1.aspx.designer.cs">
-      <DependentUpon>Site1.aspx</DependentUpon>
+    <Compile Include="Moderno.aspx.designer.cs">
+      <DependentUpon>Moderno.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OrdenaI.aspx.cs">
+      <DependentUpon>OrdenaI.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OrdenaI.aspx.designer.cs">
+      <DependentUpon>OrdenaI.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OrdenaE.aspx.cs">
+      <DependentUpon>OrdenaE.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OrdenaE.aspx.designer.cs">
+      <DependentUpon>OrdenaE.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OrdenaC.aspx.cs">
+      <DependentUpon>OrdenaC.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OrdenaC.aspx.designer.cs">
+      <DependentUpon>OrdenaC.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OrdenaM.aspx.cs">
+      <DependentUpon>OrdenaM.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OrdenaM.aspx.designer.cs">
+      <DependentUpon>OrdenaM.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="OrdenaS.aspx.cs">
+      <DependentUpon>OrdenaS.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OrdenaS.aspx.designer.cs">
+      <DependentUpon>OrdenaS.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sencillo.aspx.cs">
+      <DependentUpon>Sencillo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Sencillo.aspx.designer.cs">
+      <DependentUpon>Sencillo.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
