--- a/iqueaWeb/iqueaWeb.csproj
+++ b/iqueaWeb/iqueaWeb.csproj
@@ -67,18 +67,29 @@
     <Content Include="Administrador.aspx" />
     <Content Include="articulo.aspx" />
     <Content Include="BorrarAnuncio.aspx" />
+    <Content Include="BorrarArticulo.aspx" />
+    <Content Include="BorrarCategoria.aspx" />
     <Content Include="BorrarComentario.aspx" />
     <Content Include="BorrarOferta.aspx" />
     <Content Include="BorrarUsuario.aspx" />
     <Content Include="Carrito.aspx" />
+    <Content Include="Clasico.aspx" />
     <Content Include="CrearAnuncio.aspx" />
+    <Content Include="CrearArticulo.aspx" />
+    <Content Include="CrearCategoria.aspx" />
     <Content Include="CrearOferta.aspx" />
+    <Content Include="etc.aspx" />
     <Content Include="Exterior.aspx" />
+    <Content Include="HomePage.aspx" />
+    <Content Include="HomePage.css" />
     <Content Include="Index.aspx" />
     <Content Include="Interior.aspx" />
     <Content Include="Lista_deseos.aspx" />
+    <Content Include="Login.aspx" />
     <Content Include="Moderno.aspx" />
     <Content Include="ModificarAnuncio.aspx" />
+    <Content Include="ModificarArticulo.aspx" />
+    <Content Include="ModificarCategoria.aspx" />
     <Content Include="ModificarOferta.aspx" />
     <Content Include="mystyle.css" />
     <Content Include="OrdenaC.aspx" />
@@ -107,12 +118,33 @@
     <Compile Include="Administrador.aspx.designer.cs">
       <DependentUpon>Administrador.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Articulo.aspx.cs">
+      <DependentUpon>articulo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Articulo.aspx.designer.cs">
+      <DependentUpon>articulo.aspx</DependentUpon>
+    </Compile>
     <Compile Include="BorrarAnuncio.aspx.cs">
       <DependentUpon>BorrarAnuncio.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="BorrarAnuncio.aspx.designer.cs">
       <DependentUpon>BorrarAnuncio.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="BorrarArticulo.aspx.cs">
+      <DependentUpon>BorrarArticulo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="BorrarArticulo.aspx.designer.cs">
+      <DependentUpon>BorrarArticulo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="BorrarCategoria.aspx.cs">
+      <DependentUpon>BorrarCategoria.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="BorrarCategoria.aspx.designer.cs">
+      <DependentUpon>BorrarCategoria.aspx</DependentUpon>
     </Compile>
     <Compile Include="BorrarComentario.aspx.cs">
       <DependentUpon>BorrarComentario.aspx</DependentUpon>
@@ -142,11 +174,12 @@
     <Compile Include="Carrito.aspx.designer.cs">
       <DependentUpon>Carrito.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Carrito.master.cs">
-      <DependentUpon>Carrito.master</DependentUpon>
+    <Compile Include="Clasico.aspx.cs">
+      <DependentUpon>Clasico.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Carrito.master.designer.cs">
-      <DependentUpon>Carrito.master</DependentUpon>
+    <Compile Include="Clasico.aspx.designer.cs">
+      <DependentUpon>Clasico.aspx</DependentUpon>
     </Compile>
     <Compile Include="CrearAnuncio.aspx.cs">
       <DependentUpon>CrearAnuncio.aspx</DependentUpon>
@@ -155,6 +188,20 @@
     <Compile Include="CrearAnuncio.aspx.designer.cs">
       <DependentUpon>CrearAnuncio.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CrearArticulo.aspx.cs">
+      <DependentUpon>CrearArticulo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CrearArticulo.aspx.designer.cs">
+      <DependentUpon>CrearArticulo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CrearCategoria.aspx.cs">
+      <DependentUpon>CrearCategoria.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CrearCategoria.aspx.designer.cs">
+      <DependentUpon>CrearCategoria.aspx</DependentUpon>
+    </Compile>
     <Compile Include="CrearOferta.aspx.cs">
       <DependentUpon>CrearOferta.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -162,12 +209,26 @@
     <Compile Include="CrearOferta.aspx.designer.cs">
       <DependentUpon>CrearOferta.aspx</DependentUpon>
     </Compile>
+    <Compile Include="etc.aspx.cs">
+      <DependentUpon>etc.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="etc.aspx.designer.cs">
+      <DependentUpon>etc.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Exterior.aspx.cs">
       <DependentUpon>Exterior.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Exterior.aspx.designer.cs">
       <DependentUpon>Exterior.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="HomePage.aspx.cs">
+      <DependentUpon>HomePage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="HomePage.aspx.designer.cs">
+      <DependentUpon>HomePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
@@ -190,6 +251,13 @@
     <Compile Include="Lista_deseos.aspx.designer.cs">
       <DependentUpon>Lista_deseos.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Moderno.aspx.cs">
       <DependentUpon>Moderno.aspx</DependentUpon>
     </Compile>
@@ -202,6 +270,20 @@
     </Compile>
     <Compile Include="ModificarAnuncio.aspx.designer.cs">
       <DependentUpon>ModificarAnuncio.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarArticulo.aspx.cs">
+      <DependentUpon>ModificarArticulo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ModificarArticulo.aspx.designer.cs">
+      <DependentUpon>ModificarArticulo.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarCategoria.aspx.cs">
+      <DependentUpon>ModificarCategoria.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ModificarCategoria.aspx.designer.cs">
+      <DependentUpon>ModificarCategoria.aspx</DependentUpon>
     </Compile>
     <Compile Include="ModificarOferta.aspx.cs">
       <DependentUpon>ModificarOferta.aspx</DependentUpon>
@@ -284,7 +366,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Admin.master" />
-    <Content Include="Carrito.master" />
     <Content Include="Site1.Master" />
   </ItemGroup>
   <ItemGroup>
