--- a/iqueaWeb/iqueaWeb.csproj
+++ b/iqueaWeb/iqueaWeb.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Administrador.aspx" />
+    <Content Include="Anuncio.aspx" />
     <Content Include="articulo.aspx" />
     <Content Include="BorrarAnuncio.aspx" />
     <Content Include="BorrarArticulo.aspx" />
@@ -86,6 +87,10 @@
     <Content Include="CrearArticulo.aspx" />
     <Content Include="CrearCategoria.aspx" />
     <Content Include="CrearOferta.aspx" />
+    <Content Include="Database.mdf" />
+    <Content Include="Database_log.ldf">
+      <DependentUpon>Database.mdf</DependentUpon>
+    </Content>
     <Content Include="etc.aspx" />
     <Content Include="Exterior.aspx" />
     <Content Include="Index.aspx" />
@@ -232,6 +237,13 @@
     </Compile>
     <Compile Include="Administrador.aspx.designer.cs">
       <DependentUpon>Administrador.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Anuncio.aspx.cs">
+      <DependentUpon>Anuncio.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Anuncio.aspx.designer.cs">
+      <DependentUpon>Anuncio.aspx</DependentUpon>
     </Compile>
     <Compile Include="Articulo.aspx.cs">
       <DependentUpon>articulo.aspx</DependentUpon>
