--- a/iqueaWeb/iqueaWeb.csproj
+++ b/iqueaWeb/iqueaWeb.csproj
@@ -86,6 +86,7 @@
     <Content Include="CrearArticulo.aspx" />
     <Content Include="CrearCategoria.aspx" />
     <Content Include="CrearOferta.aspx" />
+    <Content Include="Database.mdf" />
     <Content Include="etc.aspx" />
     <Content Include="Exterior.aspx" />
     <Content Include="Index.aspx" />
