--- a/iqueaWeb/bin/iqueaWeb.dll.config
+++ b/iqueaWeb/bin/iqueaWeb.dll.config
@@ -18,5 +18,9 @@
   <connectionStrings>
     <add name="Database" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+	<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+
+  </appSettings>
 
 </configuration>
