--- a/iqueaWeb/Web.config
+++ b/iqueaWeb/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
@@ -18,7 +18,7 @@
   <connectionStrings>
     <add name="Database" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
+    <appSettings>
 	<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 
   </appSettings>
