--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,13 @@ slnx.sqlite
 
 #carpeta .vs
 /hada-grupal/.vs
+/hada-grupal/iquea/.vs
+
+#carpeta bin
+/hada-grupal/iqueaWeb/bin
+/hada-grupal/iquea/bin
+
+#carpeta obj
+/hada-grupal/iqueaWeb/obj
+/hada-grupal/iquea/obj
+
