--- a/iqueaWeb/iqueaWeb.csproj
+++ b/iqueaWeb/iqueaWeb.csproj
@@ -111,6 +111,7 @@
     <Content Include="ModificarCategoria.aspx" />
     <Content Include="ModificarOferta.aspx" />
     <Content Include="mystyle.css" />
+    <Content Include="Ofertas.aspx" />
     <Content Include="OrdenaC.aspx" />
     <Content Include="OrdenaE.aspx" />
     <Content Include="OrdenaI.aspx" />
@@ -219,7 +220,9 @@
     <Content Include="Scripts\umd\popper.js" />
     <Content Include="Scripts\umd\popper.min.js" />
     <Content Include="Sencillo.aspx" />
+    <Content Include="sillon-victoriano.jpg" />
     <Content Include="Site1.aspx" />
+    <Content Include="sofa-cama-desplegable.jpg" />
     <Content Include="Usuario.aspx" />
     <Content Include="Web.config" />
     <Content Include="Scripts\umd\popper.min.js.map" />
@@ -456,6 +459,13 @@
     </Compile>
     <Compile Include="ModificarOferta.aspx.designer.cs">
       <DependentUpon>ModificarOferta.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Ofertas.aspx.cs">
+      <DependentUpon>Ofertas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Ofertas.aspx.designer.cs">
+      <DependentUpon>Ofertas.aspx</DependentUpon>
     </Compile>
     <Compile Include="OrdenaC.aspx.cs">
       <DependentUpon>OrdenaC.aspx</DependentUpon>
